@@ -78,6 +78,16 @@ Information about older versions may be found <a href="http://pwsafe.org/history
 
 <table>
 <tbody>
+<td align="center" width="100"><a href="nojs.html" onclick="FR(3445820);return false;">3445820</a></td>
+<td>
+The Edit menu item and entry right-click context menu item "Copy Run Command to
+Clipboard" will, by default, substitute any variables within the command. To disable this,
+hold down the Ctrl key when selecting these menu items.  The standard menu shortcut cannot
+be used to disable the substitution as the Ctrl key may be used to select a different
+menu item/command.
+</td>
+</tr>
+<tr>
 <td align="center" width="100">n/a</td>
 <td>As indicated with the V3.26 release, date time fields, when exported to XML,
 now are in the W3C dateTime standard format instead of PasswordSafe's.  This release
@@ -85,6 +95,7 @@ can nolonger import XML files with date time fields in the old PasswordSafe's fo
 See Help file (the XML section of "Import Password Entries") on how to manually change
 the XML file exported prior to V3.26 to allow it to be successfully imported in this release.</td>
 </tr>
+<tr>
 </tbody>
 </table>
 
