@@ -13,11 +13,36 @@
 <h2>User Names, Passwords, and Groups: Basic</h2>
 
 <p>Username, passwords and groups together with the additional parameters are managed in 4 tabs:</p>
+
 <ul>
 <li><b><i>Basic</i>:</b> all necesarry elements for password management</li>
 <li><b><i><a href="entering_pwd_add.html">Additional</a></i>:</b> additional specifications, including history</li>
 <li><b><i><a href="entering_pwd_date.html">Dates and Times</a></i>:</b> expiry and statistics</li>
 <li><b><i><a href="entering_pwd_pp.html">Password Policy</a></i>:</b> specific differences to the default</li>
+</ul>
+
+<p>Most labels in the Basic and Additional Property Pages are <i>Smart Labels</i>.
+This means that when you click on them, the current contents of the relevant field
+are copied to the clipboard. The label will flash green to show that the data has
+been copied.  The currently supported labels are:
+<ul>
+<li><b>Basic</b></li>
+<ul>
+<li>Group</li>
+<li>Title</li>
+<li>Username</li>
+<li>Password</li>
+<li>Notes</li>
+<li>URL</li>
+<li>Email</li>
+</ul>
+<li><b>Additional</b></li>
+<ul>
+<li>Autotype</li>
+<li>Run Command</li>
+<br><br>Note: By pressing the Ctrl key down whilst clicking on the Autotype and Run Command
+labels, variables will not be substituted in the strings before copying to the clipboard.
+</ul>
 </ul>
 
 <h3><i>Basic</i> Tab</h3>
